--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -8,11 +8,30 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, .lead {
     font-weight: 300;
 }
 
+.ui-slider {
+  background: #ebedef;
+  border-radius: 0px;
+}
+.ui-slider .ui-slider-handle {
+  background-color: #1abc9c;
+  border-radius: 0px;
+}
+.ui-slider .ui-slider-range {
+  background-color: black;
+  border-radius: 0px;
+}
+
 /*---------- Header ----------*/
 header {
     background-color: #fff;
     padding-top: 25px;
     padding-bottom: 25px;
+}
+
+.CodeMirror {
+    border: 5px solid #e8f8f5;
+    height: 100%;
+    /*background-color: #CCC;*/
 }
 
 /*---------- Hero ----------*/
@@ -33,23 +52,49 @@ header {
     margin-top: 30px;
 }
 
-/*---------- Features ----------*/
-#features {
+/*--------- Compare ---------*/
+#compare {
     padding-top: 25px;
     padding-bottom: 100px;
 }
 
-#features .item {
+#compare canvas {
+    width: 100%;
+    height: 350px;
+    border: 5px solid #1abc9c
+}
+
+#compare .item {
     text-align: center;
     padding: 25px 0px;
 }
-#features .item-icon {
+#compare .item-icon {
     border-radius: 50%;
     border: 2px solid #555;
     width: 50px;
     height: 50px;
     padding-top: 12px;
     margin: 0 auto;
+}
+
+/*---------- Try ------------*/
+#try {
+    background-color: #1abc9c;
+    padding-top: 25px;
+    padding-bottom: 100px;
+    color: #fff;
+}
+
+#try canvas {
+    width: 100%;
+    height: 600px;
+    border: 5px solid #e8f8f5;
+/*    background-color: white; */
+}
+
+#try .lead {
+    color: #e8f8f5;
+    margin-top: 30px;
 }
 
 /*---------- About ----------*/
@@ -196,7 +241,6 @@ footer .footer-links > li > a {
     color: #fff;
 }
 
-/*---------- Buttons ----------*/
 .btn {
     -moz-user-select: none;
     border: none;
@@ -311,6 +355,7 @@ footer .footer-links > li > a {
 }
 
 /*---------- Forms ----------*/
+/*
 .form-control {
     background-color: #e8f8f5;
     border: 2px solid #1abc9c;
@@ -339,6 +384,7 @@ footer .footer-links > li > a {
     line-height: 1.33;
     padding: 10px 16px;
 }
+*/
 
 /*---------- Misc ----------*/
 .fill {
@@ -452,7 +498,7 @@ hr.separator-alt {
 
 /*---------- Media queries ----------*/
 @media (width: 1024px) {
-    #features .iphone-1 {
+    #compare .iphone-1 {
         margin-top: 45px;
     }
 }
@@ -460,7 +506,7 @@ hr.separator-alt {
     #hero img {
         margin-top: 200px;
     }
-    #features .iphone-1 {
+    #compare .iphone-1 {
         margin-top: 175px;
     }
     .btn-wide {
@@ -488,7 +534,7 @@ hr.separator-alt {
     #hero img {
         margin-top: 80px;
     }
-    #features, #image, #about, #video, #testimonials, #purchase, #gallery, #social, #subscribe {
+    #compare, #image, #about, #video, #testimonials, #purchase, #gallery, #social, #subscribe {
         padding-top: 50px;
         padding-bottom: 50px;
     }
@@ -534,7 +580,7 @@ hr.separator-alt {
     }
 }
 @media (width: 980px) {
-    #features .item h2 {
+    #compare .item h2 {
         font-size: 26px;
     }
     #owl-demo .item img {
@@ -542,7 +588,7 @@ hr.separator-alt {
     }
 }
 @media (min-width: 768px) and (max-width: 900px) {
-    #features .item h2 {
+    #compare .item h2 {
         font-size: 24px;
     }
     #owl-demo .item img {
@@ -562,7 +608,7 @@ hr.separator-alt {
     #hero .buttons {
         margin-bottom: 50px;
     }
-    #features img {
+    #compare img {
         margin: 20px auto;
     }
     #image {
